# shotty

./: Cargo.toml  README.md
benches/: benchmark.rs
src/: lib.rs  main.rs
src/commands/: args.rs  clipboard.rs  config.rs  screenshot.rs
