[package]
name = "shotty"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
chrono = "0.4"
config = "0.13"
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "shotty"
path = "src/main.rs"

[lib]
name = "shotty"
path = "src/lib.rs"

[[bench]]
name = "benchmark"
harness = false

