[package]
name = "shotty"
version = "0.1.1"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
chrono = "0.4"
config = "0.15.9"
directories = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "shotty"
path = "src/main.rs"

[lib]
name = "shotty"
path = "src/lib.rs"

[[bench]]
name = "benchmark"
harness = false

